--- a/config/packages/swiftmailer.yaml
+++ b/config/packages/swiftmailer.yaml
@@ -1,3 +1,14 @@
-swiftmailer:
-    url: '%env(MAILER_URL)%'
-    spool: { type: 'memory' }
+swiftmailer:    
+    transport:        "smtp"
+    host:             "smtp.gmail.com"
+    username:         "manoir.edelweiss@gmail.com"
+    password:         "@r0ad-Way"
+    auth_mode:        login
+    port:             587
+    encryption:       null
+    delivery_address: "sandro.brignoli@outlook.fr"
+    spool:            { type: memory }
+    stream_options:
+      ssl:
+        allow_self_signed: true
+        verify_peer: false
