--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    public: true
+    concerts_images_directory: '%kernel.project_dir%/public/images/concerts_img'
+
 
 services:
     # default configuration for services in *this* file
@@ -29,5 +32,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Service\FileUploader:
+        public: true
+        arguments:
+            $concerts_images_directory: '../public/images/concerts_img'
 
     Doctrine\Persistence\ObjectManager: '@doctrine.orm.default_entity_manager'
