--- a/.env
+++ b/.env
@@ -36,5 +36,5 @@ DATABASE_URL=mysql://root:@localhost:3308/concerts
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL="gmail://manoir.edelweiss:@r0ad-Way@localhost"
+MAILER_URL="gmail://username:password@localhost"
 ###< symfony/swiftmailer-bundle ###
